kubernetes-envoy-tracing/00-honeycomb-system-namespace.yaml
---
# Honeycomb specific stuff
apiVersion: v1
kind: Namespace
metadata:
  name: honeycomb-system
