kubernetes-envoy-tracing/honeycomb.yaml
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: honeycomb-serviceaccount
  namespace: honeycomb-system
---
apiVersion: rbac.authorization.k8s.io/v1beta1
kind: ClusterRoleBinding
metadata:
  name: honeycomb-serviceaccount
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: honeycomb-serviceaccount
subjects:
- kind: ServiceAccount
  name: honeycomb-serviceaccount
  namespace: honeycomb-system
---
kind: ClusterRole
apiVersion: rbac.authorization.k8s.io/v1beta1
metadata:
  name: honeycomb-serviceaccount
  namespace: honeycomb-system
rules:
  - apiGroups:
    - "*"
    resources:
    - pods
    verbs:
    - list
    - watch
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: honeycomb-agent-config
  namespace: honeycomb-system
data:
  config.yaml: |-
    watchers:
      - dataset: examples.kubernetes.envoy-access-logs
        containerName: envoy
        parser: envoy
        processors:
        - request_shape:
            field: request
    verbosity: debug
---
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  labels:
    k8s-app: honeycomb-agent
    kubernetes.io/cluster-service: 'true'
    version: v1.1
  name: honeycomb-agent-v1.1
  namespace: honeycomb-system
spec:
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        k8s-app: honeycomb-agent
        kubernetes.io/cluster-service: 'true'
        version: v1.1
    spec:
      tolerations:
        - operator: Exists
          effect: NoSchedule
      containers:
      - env:
        - name: HONEYCOMB_WRITEKEY
          valueFrom:
            secretKeyRef:
              key: key
              name: honeycomb-writekey
        - name: NODE_NAME
          valueFrom:
            fieldRef:
              fieldPath: spec.nodeName
        image: honeycombio/honeycomb-kubernetes-agent:head
        imagePullPolicy: IfNotPresent
        name: honeycomb-agent
        resources:
          limits:
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 200Mi
        volumeMounts:
        - mountPath: "/etc/honeycomb"
          name: config
          readOnly: false
        - mountPath: "/var/log"
          name: varlog
          readOnly: false
        - mountPath: "/var/lib/docker/containers"
          name: varlibdockercontainers
          readOnly: true
      serviceAccountName: honeycomb-serviceaccount
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          items:
          - key: config.yaml
            path: config.yaml
          name: honeycomb-agent-config
        name: config
      - hostPath:
          path: "/var/log"
        name: varlog
      - hostPath:
          path: "/var/lib/docker/containers"
        name: varlibdockercontainers
